flux/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-qbittorrent
  namespace: vpn-qbittorrent
  labels:
    app: vpn-qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-qbittorrent
  template:
    metadata:
      labels:
        app: vpn-qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-02
      shareProcessNamespace: true
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          ports:
            - containerPort: 8080
              name: qbittorrent-web
            - containerPort: 6881
              protocol: UDP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 8888
              name: gluetun-proxy
          volumeMounts:
            - mountPath: /tmp/gluetun
              name: gluetun-data
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
            
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - mountPath: "/config"
              name: qbittorrent-config
            - mountPath: "/downloads"
              name: qbittorrent-downloads

      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
        - name: gluetun-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: vpn-qbittorrent
spec:
  selector:
    app: vpn-qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      nodePort: 30080 
      protocol: TCP
    - name: bittorrent-tcp
      port: 6881
      targetPort: 6881
      nodePort: 30681
      protocol: TCP
    - name: bittorrent-udp
      port: 6881
      targetPort: 6881
      nodePort: 30681
      protocol: UDP
  type: NodePort
